..F....... [ZBX-15412] fixed expression overlap in configuration of regular expressions
git-svn-id: svn://svn.zabbix.com/branches/dev@89008 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBX-15412/frontends/php/styles/blue-theme.css
+++ b/ZBX-15412/frontends/php/styles/blue-theme.css
@@ -722,6 +722,17 @@ output {
   .table-paging a:focus .arrow-left {
     border-right-color: #fff; }
 
+td.table-container {
+  padding: 0 5px; }
+  td.table-container table {
+    width: 100%; }
+
+td.cell-small {
+  width: 30%; }
+
+td.cell-big {
+  width: 70%; }
+
 .paging-btn-container {
   min-height: 24px;
   position: relative; }
